--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # User-specific stuff
 .idea/
+.gradle
 
 *.iml
 *.ipr
@@ -7,6 +8,9 @@
 
 # IntelliJ
 out/
+build
+gradle
+run
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
